csbind/joltc_bindgen.cs


        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraintSettings_CreateConstraint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_FixedConstraint* JPH_FixedConstraintSettings_CreateConstraint(JPH_FixedConstraintSettings* settings, JPH_Body* body1, JPH_Body* body2);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraint_GetTotalLambdaPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraint_GetTotalLambdaPosition(JPH_FixedConstraint* constraint, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_FixedConstraint_GetTotalLambdaRotation", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_FixedConstraint_GetTotalLambdaRotation(JPH_FixedConstraint* constraint, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraintSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_DistanceConstraintSettings* JPH_DistanceConstraintSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraintSettings_GetSpace", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_DistanceConstraintSettings_GetSpace(JPH_DistanceConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraintSettings_SetSpace", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DistanceConstraintSettings_SetSpace(JPH_DistanceConstraintSettings* settings, uint space);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraintSettings_GetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DistanceConstraintSettings_GetPoint1(JPH_DistanceConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraintSettings_SetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DistanceConstraintSettings_SetPoint1(JPH_DistanceConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraintSettings_GetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DistanceConstraintSettings_GetPoint2(JPH_DistanceConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraintSettings_SetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DistanceConstraintSettings_SetPoint2(JPH_DistanceConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraintSettings_CreateConstraint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_DistanceConstraint* JPH_DistanceConstraintSettings_CreateConstraint(JPH_DistanceConstraintSettings* settings, JPH_Body* body1, JPH_Body* body2);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraint_SetDistance", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DistanceConstraint_SetDistance(JPH_DistanceConstraint* constraint, float minDistance, float maxDistance);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraint_GetMinDistance", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_DistanceConstraint_GetMinDistance(JPH_DistanceConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraint_GetMaxDistance", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_DistanceConstraint_GetMaxDistance(JPH_DistanceConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraint_GetLimitsSpringSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DistanceConstraint_GetLimitsSpringSettings(JPH_DistanceConstraint* constraint, JPH_SpringSettings* result);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraint_SetLimitsSpringSettings", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_DistanceConstraint_SetLimitsSpringSettings(JPH_DistanceConstraint* constraint, JPH_SpringSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_DistanceConstraint_GetTotalLambdaPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern float JPH_DistanceConstraint_GetTotalLambdaPosition(JPH_DistanceConstraint* constraint);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraintSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PointConstraintSettings* JPH_PointConstraintSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraintSettings_GetSpace", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint JPH_PointConstraintSettings_GetSpace(JPH_PointConstraintSettings* settings);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraintSettings_SetSpace", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PointConstraintSettings_SetSpace(JPH_PointConstraintSettings* settings, uint space);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraintSettings_GetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PointConstraintSettings_GetPoint1(JPH_PointConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraintSettings_SetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PointConstraintSettings_SetPoint1(JPH_PointConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraintSettings_GetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PointConstraintSettings_GetPoint2(JPH_PointConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraintSettings_SetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PointConstraintSettings_SetPoint2(JPH_PointConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraintSettings_CreateConstraint", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_PointConstraint* JPH_PointConstraintSettings_CreateConstraint(JPH_PointConstraintSettings* settings, JPH_Body* body1, JPH_Body* body2);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraint_SetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PointConstraint_SetPoint1(JPH_PointConstraint* constraint, uint space, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraint_SetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PointConstraint_SetPoint2(JPH_PointConstraint* constraint, uint space, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_PointConstraint_GetTotalLambdaPosition", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_PointConstraint_GetTotalLambdaPosition(JPH_PointConstraint* constraint, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_Create", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern JPH_HingeConstraintSettings* JPH_HingeConstraintSettings_Create();

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_GetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_GetPoint1(JPH_HingeConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_SetPoint1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_SetPoint1(JPH_HingeConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_GetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_GetPoint2(JPH_HingeConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_SetPoint2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_SetPoint2(JPH_HingeConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_SetHingeAxis1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_SetHingeAxis1(JPH_HingeConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_GetHingeAxis1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_GetHingeAxis1(JPH_HingeConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_SetNormalAxis1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_SetNormalAxis1(JPH_HingeConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_GetNormalAxis1", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_GetNormalAxis1(JPH_HingeConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_SetHingeAxis2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_SetHingeAxis2(JPH_HingeConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_GetHingeAxis2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_GetHingeAxis2(JPH_HingeConstraintSettings* settings, JPH_Vec3* result);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_SetNormalAxis2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_SetNormalAxis2(JPH_HingeConstraintSettings* settings, JPH_Vec3* value);

        [DllImport(__DllName, EntryPoint = "JPH_HingeConstraintSettings_GetNormalAxis2", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void JPH_HingeConstraintSettings_GetNormalAxis2(JPH_HingeConstraintSettings* settings, JPH_Vec3* result);
